--- a/.gitattributes
+++ b/.gitattributes
@@ -4,4 +4,4 @@
 
 # Except these files will always be checked out with CRLFs (regardless of the
 # OS they were checked out on).
-*.ans text eol=crlf
+**/*.ans text eol=crlf
