Added QB64_GJ_LIB as module, updated map test with sound and started learning waveforms with _SNDRAW

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "include/Toolbox64"]
 	path = include/Toolbox64
 	url = https://github.com/a740g/Toolbox64
+[submodule "include/QB64_GJ_LIB"]
+	path = include/QB64_GJ_LIB
+	url = https://github.com/grymmjack/QB64_GJ_LIB
