--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -28,6 +28,52 @@
             }
         },
         {
+            "label": "Compile with warnings",
+            "dependsOn": "Remove",
+            "type": "shell",
+            "windows": {
+                "command": "${config:qb64.compilerPath}",
+                "args": [
+                    "-w",
+                    "-c",
+                    "${fileDirname}\\${fileBasename}",
+                    "-o",
+                    "${fileDirname}\\${fileBasenameNoExtension}.exe"
+                ]
+            },
+            "osx": {
+                "command": "${config:qb64.compilerPath}",
+                "args": [
+                    "-w",
+                    "-c",
+                    "${fileDirname}/${fileBasename}",
+                    "-o",
+                    "${fileDirname}/${fileBasenameNoExtension}.run"
+                ]
+            },
+            "linux": {
+                "command": "${config:qb64.compilerPath}",
+                "args": [
+                    "-w",
+                    "-c",
+                    "${fileDirname}/${fileBasename}",
+                    "-o",
+                    "${fileDirname}/${fileBasenameNoExtension}.run"
+                ]
+            },
+            "presentation": {
+                "echo": false,
+                "reveal": "always",
+                "focus": false,
+                "panel": "shared",
+                "showReuseMessage": false,
+                "clear": false
+            },
+            "group": {
+                "kind": "build"
+            }
+        },
+        {
             "label": "Compile",
             "dependsOn": "Remove",
             "type": "shell",
